--- a/trunk/web/WEB-INF/pages/quanzong/form.vm
+++ b/trunk/web/WEB-INF/pages/quanzong/form.vm
@@ -28,7 +28,7 @@
 			<td class="tablelistbg">
 				#if($!biz.type!='2')<a href="/quanzong/actions.html?method=insert&parentId=$vMUtils.encrypt($biz.id)"  >添加子分类</a>#end
 				<a href="/quanzong/actions.html?method=update&sid=$vMUtils.encrypt($biz.id)"  >编辑</a>
-				<a href="/quanzong/actions.html?method=delete&sid=$vMUtils.encrypt($biz.id)&parentId=$vMUtils.encrypt($parentId)"  >删除</a>
+				<a href="/quanzong/actions.html?method=delete&sid=$vMUtils.encrypt($biz.id)&parentId=$vMUtils.encrypt($parentId)"  onclick="return confirm('您确实要删除吗？')">删除</a>
 			</td>
          </tr>
 		#end
