--- a/trunk/web/WEB-INF/pages/dictionarysort/list.vm
+++ b/trunk/web/WEB-INF/pages/dictionarysort/list.vm
@@ -34,7 +34,7 @@
 			<td class="tablelistbg">
 				<a href="/dictionarysort/actions.html?method=insert&parentId=$vMUtils.encrypt($biz.id)&cm=sys5"  >添加子分类</a>
 				<a href="/dictionarysort/actions.html?method=update&sid=$vMUtils.encrypt($biz.id)&cm=sys5"  >编辑</a>
-				<a href="/dictionarysort/actions.html?method=delete&sid=$vMUtils.encrypt($biz.id)&cm=sys5"  >删除</a>
+				<a href="/dictionarysort/actions.html?method=delete&sid=$vMUtils.encrypt($biz.id)&cm=sys5"  onclick="return confirm('您确实要删除吗？')">删除</a>
 			</td>
          </tr>
 		#end
