--- a/trunk/web/WEB-INF/pages/dhsz/insert.vm
+++ b/trunk/web/WEB-INF/pages/dhsz/insert.vm
@@ -3,7 +3,7 @@
 <div id="conbg">
 <div class=contitle>
 <div class=leftmain>新增档号</div>
-<div class=rightmain>&nbsp;&nbsp;<a href="/dhsz/actions.html?method=list">&#171;返回</a></div>
+<div class=rightmain>&nbsp;&nbsp;<a href="/infosort/actions.html?method=list">&#171;返回</a></div>
 <div class=rightmain></div>
 </div>
 $validator.getDynamicJavascript()
